Made 'op' variable in url for choosing your player

--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -160,7 +160,7 @@ window.addEventListener("load", function(){
 
   function menutime(){
   if(time <= 1){
-  window.location.href = "TrainStation.html";
+  window.location.href = "TrainStation.html?op=Recruit";
   }
   time = time -1;
   console.log(time);
@@ -175,7 +175,7 @@ window.addEventListener("load", function(){
    }
      </script>
 
-<a id="Switch" href="TrainStation.html"></a>
+<a id="Switch" href="TrainStation.html?op=Recruit"></a>
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -183,35 +183,35 @@ window.addEventListener("load", function(){
 
 <p id="timer" style=" pointer-events: none; user-select:none;position: absolute; top:5%; left:50%; margin-top: -25px; margin-left: -25px;width: 50px;height: 50px; text-align: center;"></p>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Tortue">
   <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Tortue.png">
 </a>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=PewDiePie">
   <img onmouseover="document.getElementById('id02').style.display='block'" onmouseout="document.getElementById('id02').style.display='none'" srcset="OperatorImages/Pewdiepie.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Pewdiepie.png">
 </a>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=BulletPoint">
   <img onmouseover="document.getElementById('id03').style.display='block'" onmouseout="document.getElementById('id03').style.display='none'" srcset="OperatorImages/BulletPoint.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Bullet Point.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Vision">
   <img onmouseover="document.getElementById('id05').style.display='block'" onmouseout="document.getElementById('id05').style.display='none'" srcset="OperatorImages/Vision.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Vision.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Recruit">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
 </a>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Javelin">
   <img onmouseover="document.getElementById('id06').style.display='block'" onmouseout="document.getElementById('id06').style.display='none'" srcset="OperatorImages/Javelin.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Javelin.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Recruit">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Ricochet">
   <img onmouseover="document.getElementById('id07').style.display='block'" onmouseout="document.getElementById('id07').style.display='none'" srcset="OperatorImages/Ricochet.png" style="position: absolute; top: 66%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Ricochet.png">
 </a>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Blackout">
 <img onmouseover="document.getElementById('id01').style.display='block'" onmouseout="document.getElementById('id01').style.display='none'" srcset="OperatorImages/Blackout.png" style="position: absolute; top: 38%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Blackout.png"/>
 </a>
 
