--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -175,7 +175,7 @@ window.addEventListener("load", function(){
    }
      </script>
 
-<a id="Switch" href="TrainStation.html"></a>
+<a id="Switch" href="TrainStation.html?op=Recruit"></a>
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -183,34 +183,34 @@ window.addEventListener("load", function(){
 
 <p id="timer" style=" pointer-events: none; user-select:none;position: absolute; top:5%; left:50%; margin-top: -25px; margin-left: -25px;width: 50px;height: 50px; text-align: center;"></p>
 
-<a id="Tortue" href="TrainStation.html">
+<a id="Tortue" href="TrainStation.html?op=Cloud9Benis">
   <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Cloud9Benis.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Cloud9Benis.png">
 </a>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Outlast">
   <img onmouseover="document.getElementById('id02').style.display='block'" onmouseout="document.getElementById('id02').style.display='none'" srcset="OperatorImages/Outlast.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Outlast.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Riot">
   <img onmouseover="document.getElementById('id03').style.display='block'" onmouseout="document.getElementById('id03').style.display='none'" srcset="OperatorImages/Riot.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Riot.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Outlook">
   <img onmouseover="document.getElementById('id05').style.display='block'" onmouseout="document.getElementById('id05').style.display='none'" srcset="OperatorImages/Outlook.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Outlook.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Recruit">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
 </a>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Whisper">
   <img onmouseover="document.getElementById('id06').style.display='block'" onmouseout="document.getElementById('id06').style.display='none'" srcset="OperatorImages/Whisper.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Whisper.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Recruit">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
 </a>
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Recruit">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
 </a>
 
-<a href="TrainStation.html">
+<a href="TrainStation.html?op=Glaze">
 <img onmouseover="document.getElementById('id01').style.display='block'" onmouseout="document.getElementById('id01').style.display='none'" srcset="OperatorImages/Glaze.png" style="position: absolute; top: 38%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Glaze.png"/>
 </a>
 
