--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -205,7 +205,7 @@ window.addEventListener("load", function(){
   <img onmouseover="document.getElementById('id06').style.display='block'" onmouseout="document.getElementById('id06').style.display='none'" srcset="OperatorImages/Javelin.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Javelin.png">
 </a>
 <a href="TrainStation.html">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
+  <img srcset="OperatorImages/WolfGang.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="WolfGang.png">
 </a>
 <a href="TrainStation.html">
   <img onmouseover="document.getElementById('id07').style.display='block'" onmouseout="document.getElementById('id07').style.display='none'" srcset="OperatorImages/Ricochet.png" style="position: absolute; top: 66%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Ricochet.png">
