Did stuff with sound

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ modal:hover{
 
 
    <div class="dropdown">
-  <button class="button"
+  <button onmouseover="document.getElementById('SoundEF')" class="button"
   style="
    position: absolute;
    top: 81%;
@@ -198,7 +198,7 @@ modal:hover{
     </form>
 
     <a href="Credits.html">
-    <button
+    <button onmouseover="document.getElementById('SoundEF')"
     style="position: absolute;
     top: 113%;
     left: 50%;
@@ -208,7 +208,7 @@ modal:hover{
     "class="button">Credits</button>
     </a>
 
-   <button onclick="document.getElementById('id01').style.display='block' && Clickplay"
+   <button onclick="document.getElementById('id01').style.display='block'"
    style="position: absolute;
    top: 97%;  left: 50%;
    margin-top: -10%;
@@ -251,19 +251,21 @@ window.onclick = function(event) {
         modal.style.display = "none";
     }
 }
-var Clickplay = new Audio('Songs/Cyber_Starting_Area.mp3');
-window.addEventListener("load", function () {
-    Clickplay.volume = 0.35;
-    Clickplay.loop = true;
-    Clickplay.play();
-});
 
 var music = new Audio('Songs/Cyber_Starting_Area.mp3');
 window.addEventListener("load", function () {
-    music.volume = 0.25;
+    music.volume = 0.05;
     music.loop = true;
     music.play();
 });
+</script>
+
+<script id="SoundEF">
+function SoundEffectMenuHover(){
+var clickplay = new Audio('SoundEffects/ButtonClickMenu.mp3');
+clickplay.volume = 1.00;
+clickplay.play();
+}
 </script>
 
   </body>
