--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ can.style.height = window.innerHeight + "px";>
   height: 360px;
   "vsrc="MenuTextures/SiegeXY.png">
 </picture>
- <body background = "MenuTextures/Background.jpg" >
+    </head>
+ <body background = "MenuTextures/Background.jpg">
     <style>
     body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -197,7 +198,7 @@ modal:hover{
     <!--</div>-->
     </form>
 
-    <a href="Credits.html">
+    <a onclick="window.location.href = 'Credits.html?t=' + music.currentTime">
     <button
     style="position: absolute;
     top: 113%;
@@ -216,7 +217,7 @@ modal:hover{
    width: 20%;
    ">Settings</button>
 
-   <a href="Barracks.html">
+   <a onclick="window.location.href = 'Barracks.html?t=' + music.currentTime;">
    <button
    style="position: absolute;
    top: 89%;  left: 50%;
@@ -226,7 +227,7 @@ modal:hover{
    ">Barracks</button>
    </a>
 
-   <a href="HowToPlay.html">
+   <a onclick="window.location.href = 'HowToPlay.html?t=' + music.currentTime">
    <button style="position: absolute; top: 105%; left: 50%; margin-top: -10%;
    margin-left: -10%;
    width: 20%;">How To Play</button>
@@ -255,13 +256,22 @@ var Clickplay = new Audio('Songs/Cyber_Starting_Area.mp3');
 window.addEventListener("load", function () {
     Clickplay.volume = 0.35;
     Clickplay.loop = true;
-    Clickplay.play();
+    //Clickplay.play();
 });
-
+    
+var url;
+var t = 0;
 var music = new Audio('Songs/Cyber_Starting_Area.mp3');
+    if (window.location.href.search("t=") !== -1) {
+        url = window.location.href.search("t=") + 2;
+        t = parseFloat(window.location.href.substr(url));
+    } else {t = 0;}
+    
 window.addEventListener("load", function () {
+    console.log(window.location.href.search("t="));
     music.volume = 0.25;
     music.loop = true;
+    music.currentTime = t;
     music.play();
 });
 </script>
