--- a/Credits.html
+++ b/Credits.html
@@ -145,9 +145,18 @@ span.psw {
     video.pause();
   }
 }
+var url = window.location.href.search("t=") + 2;
+        var t = parseFloat(window.location.href.substr(url));
+        var music = new Audio('Songs/Cyber_Starting_Area.mp3');
+        window.addEventListener("load", function () {
+            music.volume = 0.25;
+            music.loop = true;
+            music.currentTime = t;
+            music.play();
+        });
 </script>
 <p style="position: absolute; top: 10%; left: 45%; color: #ffffff; text-align: center;">GAME DEVELOPERS<br/><br/>Nathan Sturgeon<br/>Conner Cullity</p>
-<a href="index.html">
+<a onclick="window.location.href = '/?t=' + music.currentTime">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
 </a>
 </html>
