--- a/HowToPlay.html
+++ b/HowToPlay.html
@@ -128,6 +128,19 @@ span.psw {
   .show {display: block;}
 }
 </style>
+      <script>
+        var url = window.location.href.search("t=") + 2;
+        var t = parseFloat(window.location.href.substr(url));
+        var music = new Audio('Songs/Cyber_Starting_Area.mp3');
+        window.addEventListener("load", function () {
+            music.volume = 0.25;
+            music.loop = true;
+            music.currentTime = t;
+            music.play();
+        });
+      </script>
+    </head>
+    <body>
 
 <img style=" position: absolute; top: 23%; left: 21%; width: 5%; height: 8%;" src="Keys/W1.png">
 <img style=" position: absolute; top: 32%; left: 15.5%; width: 5%; height: 8%;" src="Keys/A1.png">
@@ -144,7 +157,8 @@ span.psw {
 <img style=" position: absolute; top: 52%; left: 21%; width: 7%; height: 16%;" src="Keys/MouseLeft.png">
 <img style=" position: absolute; top: 52%; left: 30.5%; width: 7%; height: 16%;" src="Keys/MouseRight.png">
 
-<a href="index.html">
+<a onclick="window.location.href = '/?t=' + music.currentTime">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
 </a>
+    </body>
 </html>
