added most of collisionVision rectangles

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -265,11 +265,17 @@ div#load_screen > div#loading{
               <rect class="collision" x="1909" y="0" height="54" width="21" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="30" y="1970" height="350" width="140" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
 
-              <rect class="collisionVision" x="160" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
-              <rect class="collisionVision" x="367" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
-              <rect class="collisionVision" x="669" y="1318" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
-              <rect class="collisionVision" x="856" y="1318" height="190" width="90" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collisionVision" x="160" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="367" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="669" y="1318" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="856" y="1318" height="190" width="90" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="5.750000000001023" y="1297.2499999999832" height="211" width="576" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="5.450000000000145" y="1512.4500000000246" height="196" width="1146" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="2.1499999999993804" y="1731.4500000000246" height="950.0499999999836" width="1909.3499999999885" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="1912.8499999999915" y="3.0500000000040473" height="2677.350000000022" width="2085.8500000001995" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
+              <rect class="collisionVision" x="3730.750000000148" y="2677.750000000077" height="1319.1500000001465" width="266.750000000005" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
 
+          
               <rect class="collisionT" x="1590" y="445" height="30" width="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collisionT" x="1145" y="865" height="30" width="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collisionT" x="740" y="1440" height="30" width="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
