--- a/TrainStation.html
+++ b/TrainStation.html
@@ -264,6 +264,8 @@ div#load_screen > div#loading{
               <rect class="collision" x="1909" y="140" height="1046" width="21" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="1909" y="0" height="54" width="21" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="30" y="1970" height="350" width="140" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
+              <rect class="collision" x="1002.1999999999983" y="175.39999999999685" height="141" width="256.0000000000001" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
+              <rect class="collision" x="1444.0999999999972" y="451.4999999999979" height="232.99999999999994" width="187" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
 
               <rect class="collisionVision" x="160" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
               <rect class="collisionVision" x="367" y="1100" height="190" width="88" style="fill:lime;stroke:purple;stroke-width:1;opacity:0;"/>
