--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -183,35 +183,35 @@ window.addEventListener("load", function(){
 
 <p id="timer" style=" pointer-events: none; user-select:none;position: absolute; top:5%; left:50%; margin-top: -25px; margin-left: -25px;width: 50px;height: 50px; text-align: center;"></p>
 
-<a id="Tortue" href="TrainStation.html?op=Cloud9Benis">
-  <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Cloud9Benis.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Cloud9Benis.png">
+<a id="Tortue" href="TrainStation.html?op=Riot">
+  <img onmouseover="document.getElementById('id03').style.display='block'" onmouseout="document.getElementById('id03').style.display='none'" srcset="OperatorImages/Riot.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Riot.png">
 </a>
 
 <a href="TrainStation.html?op=Outlast">
-  <img onmouseover="document.getElementById('id02').style.display='block'" onmouseout="document.getElementById('id02').style.display='none'" srcset="OperatorImages/Outlast.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Outlast.png">
+  <img onmouseover="document.getElementById('id02').style.display='block'" onmouseout="document.getElementById('id02').style.display='none'" srcset="OperatorImages/Outlast.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Outlast.png">
 </a>
-<a href="TrainStation.html?op=Riot">
-  <img onmouseover="document.getElementById('id03').style.display='block'" onmouseout="document.getElementById('id03').style.display='none'" srcset="OperatorImages/Riot.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Riot.png">
+<a href="TrainStation.html?op=Glaze">
+  <img onmouseover="document.getElementById('id01').style.display='block'" onmouseout="document.getElementById('id01').style.display='none'" srcset="OperatorImages/Glaze.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Glaze.png">
 </a>
 <a href="TrainStation.html?op=Outlook">
   <img onmouseover="document.getElementById('id05').style.display='block'" onmouseout="document.getElementById('id05').style.display='none'" srcset="OperatorImages/Outlook.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Outlook.png">
 </a>
 <a href="TrainStation.html?op=Recruit">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
+  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
+</a>
+
+<a href="TrainStation.html?op=Cloud9Benis">
+  <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Cloud9Benis.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Cloud9Benis.png">
+</a>
+<a href="TrainStation.html?op=Recruit">
+  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
+</a>
+<a href="TrainStation.html?op=Inferno">
+  <img onmouseover="document.getElementById('id07').style.display='block'" onmouseout="document.getElementById('id07').style.display='none'" srcset="OperatorImages/Inferno.png" style="position: absolute; top: 66%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Inferno.png">
 </a>
 
 <a href="TrainStation.html?op=Whisper">
-  <img onmouseover="document.getElementById('id06').style.display='block'" onmouseout="document.getElementById('id06').style.display='none'" srcset="OperatorImages/Whisper.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Whisper.png">
-</a>
-<a href="TrainStation.html?op=Recruit">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
-</a>
-<a href="TrainStation.html?op=Recruit">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
-</a>
-
-<a href="TrainStation.html?op=Glaze">
-<img onmouseover="document.getElementById('id01').style.display='block'" onmouseout="document.getElementById('id01').style.display='none'" srcset="OperatorImages/Glaze.png" style="position: absolute; top: 38%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Glaze.png"/>
+<img onmouseover="document.getElementById('id06').style.display='block'" onmouseout="document.getElementById('id06').style.display='none'" srcset="OperatorImages/Whisper.png" style="position: absolute; top: 38%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Whisper.png"/>
 </a>
 
 <div id="id01" class="modal">
@@ -312,6 +312,24 @@ window.addEventListener("load", function(){
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Whisper</p>
       <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Whisper.png"></img>
+    </div>
+    <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
+    <div class="container" style="background-color:#f1f1f1">
+    </div>
+  </form>
+</div>
+
+<div id="id07" class="modal">
+  <form class="modal-content animate" action="/CasualAttacker.html">
+    <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Inferno</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy.</p>
+      <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Inferno.png"></img>
     </div>
     <div class="square"></div>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
